# tocfl

./: Cargo.toml  README.md  tocfl_words.json
sentences/: Cargo.toml
sentences/src/: main.rs
src/: lib.rs  main.rs
