[package]
name = "tocfl"
version = "0.2.0"
edition = "2021"
description = "Chinese TOCFL vocabulary by levels"
keywords = ["TOCFL", "chinese", "traditional-chinese", "dictionary" ]
homepage = "https://github.com/pseitz/tocfl"
repository = "https://github.com/pseitz/tocfl"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.19.1"
prettify_pinyin = "1.1.2"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"

[[bin]]
name = "create_json"
path = "src/main.rs"
publish = false

[lib]
name = "tocfl"
path = "src/lib.rs"
